--- a/home.html
+++ b/home.html
@@ -1,7 +1,8 @@
 <html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>
-	你好
+        你好
 </title>
-
-<p>欢迎</p>
-
+<body background="./pictures/genshin.jpg" 
+               style="background-repeat:no-repeat">
+         </body>
